model trains, but loss is nan

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ start_container.sh
 start_jupyternotebook.sh
 PionReconstruction/data
 PionReconstruction/models
+PionReconstruction/util/__pycache__/
